# flux-model

./: Flux.hs  README.md  flux-model.cabal
src/: Flux.hs
test/: Spec.hs
